    - make it easier for other apps to embed the text interface (by
      creating a TextUI(String[]) and .run()ing it), and to extend the
      commands known (by registering them with syndie.db.CLI)
    - (syndie.gui branch) initial stub message viewer, depends upon swt
      libs being located as specified in bin/syndie-gui (at runtime) or
      nbproject/project.properties (at build time)

* 2006-10-15  0.915b released
    - added support for posting archives to freenet 0.7 via the 
      freenetpost command in the syndicate menu.  pulling from freenet was
      already possible through fproxy, though it now treats archive URLs
      containing USK@, SSK@, and CHK@ specially (redirecting them to the
      correct fproxy location)

* 2006-10-14  0.914b released
    - revamped HTML design (thanks HotTuna!)
    - put together a simple monotone_howto.html as a quickstart

* 2006-10-13  0.913b released
    - bundle a sample bash script for pulling websites into syndie
      (depends on wget for fetching and links for html to text conversion)
    - translate addref URIs that refer to http URLs into SyndieURIs
      transparently
    - filled in the related.html page a bit

* 2006-10-12  0.912b released
    - migrated to monotone
    - default to compact mode for thread display
    - used cervantes' syndie_nets.png image (thanks!)

* 2006-10-08  0.910a released
    - implemented the new "threads" command, allowing intra as well as
      interchannel searching based on tags, with results ordered by most
      recently updated threads.
    - implemented the new "alias" command (and associated database table),
      allowing single and multicommand aliases using ";" as a command
      delimiter.  e.g.
      "alias sync menu syndicate; getindex; fetch; schedule --put archive; post"

* 2006-10-07  0.909a released
    - added a new "history" and associated csh-style history editing
      commands (!!, !-$num, !$num, ^a, ^a^b).