@@ -8,6 +8,8 @@
     - (syndie.gui branch) initial stub message viewer, depends upon swt
       libs being located as specified in bin/syndie-gui (at runtime) or
       nbproject/project.properties (at build time)
+    - (syndie.gui branch) further refinement to the gui stub, loads
+      message bodies with viewmsg --uri $uri
 
 * 2006-10-15  0.915b released
     - added support for posting archives to freenet 0.7 via the 
